# smart-garment-chain

./: .gitignore  README.md
.github/workflows/: ci.yml  deploy.yml
apps/: docker-compose.yml
apps/Supply-chain-main/: .env  Dockerfile  eslint.config.mjs  package-lock.json  package.json
apps/Supply-chain-main/actions/design/: design.ts
apps/Supply-chain-main/actions/login/: login.ts  login.tsx
apps/Supply-chain-main/config/: config.ts
apps/Supply-chain-main/models/: DesignModel.ts  LineModel.ts  Location.ts  OrderModel.ts  ProductionLineModel.ts  User.ts
apps/Supply-chain-main/utils/: functions.ts
apps/backend/python-api/: Dockerfile  pyproject.toml
apps/backend/python-api/src/: app.py  config.py  requirements.txt
apps/backend/python-api/src/routes/: index.py  packingController.py  supplierSelection.py  vehiclePredict.py
apps/backend/python-api/src/services/: estimate.py  rankSuppliers.py
apps/backend/python-api/src/services/models/: New Garment_production_dataset.xlsx  stacked_modelup-v4.joblib
apps/backend/python-api/src/services/models/supplier_selection/: evaluation_results.txt  feature_scaler.pkl  item_encoder.pkl
apps/backend/python-api/src/services/packing/: data.py  packingService.py
apps/backend/python-api/src/utils/: vehicle_utils.py
apps/frontend/: package-lock.json  package.json
apps/frontend/public/: index.html
apps/frontend/src/: App.tsx
apps/mobile-app/: package-lock.json  package.json
apps/mobile-app/app/: Container3D.tsx  ManageLocations.tsx  OptimizedTransport.tsx  add-warehouse.tsx  packing.tsx  transport.tsx
(+90 files in other folders)
