[tool.poetry]
name = "python-api"
version = "0.1.0"
description = ""
authors = ["Sauni Weerasinghe <it21373848@my.sliit.lk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
flask = "^3.1.0"
scikit-learn = "^1.5.2"
openpyxl = "^3.1.5"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
